--- a/src/views/join.pug
+++ b/src/views/join.pug
@@ -10,6 +10,9 @@ block content
         input(placeholder="Username", name="username", type="text", required)
         input(placeholder="password", name="password", type="password", required)
         input(placeholder="Confirm password", name="password2", type="password", required)
-        
         input(placeholder="Location", name="location", type="text", required)
         input(type="submit", value="Join")
+    hr
+    div 
+        span Already have an account? 
+        a(href="/login") Login now &rarr;
