--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -4,7 +4,6 @@ html(lang="ko")
         title #{pageTitle} | #{siteName}
         link(rel="stylesheet" href="https://unpkg.com/mvp.css")
     body
-
         header
             h1=pageTitle
             nav
@@ -12,17 +11,17 @@ html(lang="ko")
                     li
                         a(href="/") Home
                     if loggedIn
-                        li    
-                            a(href="/logout") Log Out
-                        li 
+                        li
+                            a(href="/users/logout")  Log Out
+                        li
                             a(href="/my-profile") #{loggedInUser.name}의 Profile
                     else
-                        li    
-                            a(href="/join") Join    
-                        li    
-                            a(href="/login") Login  
+                        li
+                            a(href="/join")  Join
+                        li
+                            a(href="/login")  Login                        
                     li
-                        a(href="/search") Search    
+                        a(href="/search") Search
                     li
                         a(href="/videos/upload") Upload Video
         main
