--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -1,6 +1,7 @@
 extends base
 block content
     video(src="/"+video.fileUrl, controls)
+//    
     div
         p=video.description
         small=video.createdAt
@@ -11,3 +12,7 @@ block content
         a(href=`${video.id}/edit`) Edit Video &rarr;
         br
         a(href=`${video.id}/delete`) Delete Video &rarr;
+
+    
+block scripts 
+    script(src="/static/js/videoPlayer.js")
