--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -1,7 +1,13 @@
 extends base
 block content
     video(src="/"+video.fileUrl, controls)
-//    
+    div 
+        button#play Play 
+        button#mute Mute
+        span#time 00:00/00:00
+        input(type="range", step="0.1", min="0", max="1")#volume
+
+//-    
     div
         p=video.description
         small=video.createdAt
@@ -15,4 +21,4 @@ block content
 
     
 block scripts 
-    script(src="/static/js/videoPlayer.js")
+    script(src="/static/js/videoPlayer.js") 
