--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -1,17 +1,18 @@
 extends base.pug
 
 block content
-    div 
+    div
+        video#preview
         button#startBtn Start Recording
-    if errorMessage 
+    if errorMessage
         span=errorMessage
-    form(method="POST",enctype="multipart/form-data" )
-        label(for="video") Video File 
+    form(method="POST", enctype="multipart/form-data")
+        label(for="video") Video File
         input(type="file", accept="video/*", required, id="video", name="video")
-        input(placeholder="Title", required, type="text", name="title" maxlength=80)
-        input(placeholder="Description", required, type="text", name="description", minlength=5)
-        input(placeholder="Hashtags, separated by coma", required, type="text", name="hashtags" )
-        input(value="Save",type="submit")
+        input(placeholder="Title", required, type="text", name="title", maxlength=80)
+        input(placeholder="Description", required, type="text", name="description", minlength=20)
+        input(placeholder="Hashtags, separated by comma.", required, type="text", name="hashtags")
+        input(type="submit", value="Upload Video")
 //- input에는 이름을 꼭 붙여주어야 바디로 받아올수 있음.
 block scripts
     script(src="/static/js/recorder.js") 
